--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
   "author": "hosein",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "app-module-path": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
+    "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.10.0",
+    "prettier": "^3.3.3"
   }
 }
