--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
