--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "validator": "^13.12.0"
