--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express": "^4.21.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
+    "graphql-upload-minimal": "^1.6.1",
     "jsonwebtoken": "^9.0.2",
+    "mkdirp": "^3.0.1",
     "mongoose": "^8.7.0",
+    "mongoose-paginate-v2": "^1.8.5",
     "nodemon": "^3.1.7",
     "validator": "^13.12.0"
   },
