--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "file-type": "^16.5.4",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "graphql-upload-minimal": "^1.6.1",
+    "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mkdirp": "^3.0.1",
     "mongoose": "^8.7.0",
